@@ -1,3 +1,6 @@
+HEAD
+	+ License management improved
+	+ License activation improved
 6.2.0
 	+ Set version number to 6.2.0
 6.1.3
